[package]
name = "snail"
version = "1.0.0"
authors = ["Simone Raimondi <simo@cleverit.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcg32 = { git = "https://github.com/SRaimondi/pcg32.git", branch = "master"}
